syntax = "proto3";
import "google/protobuf/empty.proto";
package websockets;
option go_package = "tsuwari/grpc/websockets";


service Websocket {
	rpc YoutubeAddSongToQueue(YoutubeAddSongToQueueRequest) returns (google.protobuf.Empty) {}
	rpc YoutubeRemoveSongToQueue(YoutubeRemoveSongFromQueueRequest) returns (google.protobuf.Empty) {}

	rpc ObsCheckIsUserConnected(ObsCheckUserConnectedRequest) returns (ObsCheckUserConnectedResponse) {}
	rpc ObsSetScene(ObsSetSceneMessage) returns (google.protobuf.Empty) {}
	rpc ObsToggleSource(ObsToggleSourceMessage) returns (google.protobuf.Empty) {}
	rpc ObsToggleAudio(ObsToggleAudioMessage) returns (google.protobuf.Empty) {}
	rpc ObsAudioSetVolume(ObsAudioSetVolumeMessage) returns (google.protobuf.Empty) {}
	rpc ObsAudioIncreaseVolume(ObsAudioIncreaseVolumeMessage) returns (google.protobuf.Empty) {}
	rpc ObsAudioDecreaseVolume(ObsAudioDecreaseVolumeMessage) returns (google.protobuf.Empty) {}
	rpc ObsAudioEnable(ObsAudioDisableOrEnableMessage) returns (google.protobuf.Empty) {}
	rpc ObsAudioDisable(ObsAudioDisableOrEnableMessage) returns (google.protobuf.Empty) {}
	rpc ObsStopStream(ObsStopOrStartStream) returns (google.protobuf.Empty) {}
	rpc ObsStartStream(ObsStopOrStartStream) returns (google.protobuf.Empty) {}

	rpc TextToSpeechSay(TTSMessage) returns (google.protobuf.Empty) {}
	rpc TextToSpeechSkip(TTSSkipMessage) returns (google.protobuf.Empty) {}

	rpc TriggerAlert(TriggerAlertRequest) returns (google.protobuf.Empty) {}
	rpc RefreshOverlays(RefreshOverlaysRequest) returns (google.protobuf.Empty) {}

	rpc RefreshChatOverlaySettings(RefreshChatSettingsRequest) returns (google.protobuf.Empty) {}
	rpc RefreshKappagenOverlaySettings(RefreshKappagenOverlaySettingsRequest) returns (google.protobuf.Empty) {}

	rpc TriggerKappagen(TriggerKappagenRequest) returns (google.protobuf.Empty) {}
	rpc TriggerKappagenByEvent(TriggerKappagenByEventRequest) returns (google.protobuf.Empty) {}

	rpc TriggerShowBrb(TriggerShowBrbRequest) returns (google.protobuf.Empty) {}
	rpc TriggerHideBrb(TriggerHideBrbRequest) returns (google.protobuf.Empty) {}
	rpc RefreshBrbSettings(RefreshBrbSettingsRequest) returns (google.protobuf.Empty) {}
}

message YoutubeAddSongToQueueRequest {
	string channelId = 1;
	string entityId = 2;
}

message YoutubeRemoveSongFromQueueRequest {
	string channelId = 1;
	string entityId = 2;
}

message ObsSetSceneMessage {
	string channelId = 1;
	string sceneName = 2;
}

message ObsToggleSourceMessage {
	string channelId = 1;
	string sourceName = 2;
}

message ObsToggleAudioMessage {
	string channelId = 1;
	string audioSourceName = 2;
}

message ObsAudioSetVolumeMessage {
	string channelId = 1;
	string audioSourceName = 2;
	uint32 volume = 3;
}

message ObsAudioIncreaseVolumeMessage {
	string channelId = 1;
	string audioSourceName = 2;
	uint32 step = 3;
}

message ObsAudioDecreaseVolumeMessage {
	string channelId = 1;
	string audioSourceName = 2;
	uint32 step = 3;
}

message ObsAudioDisableOrEnableMessage {
	string channelId = 1;
	string audioSourceName = 2;
}

message ObsStopOrStartStream {
	string channelId = 1;
}

message TTSMessage {
	string channelId = 1;
	string text = 2;
	string voice = 3;
	string rate = 4;
	string pitch = 5;
	string volume = 6;
}

message TTSSkipMessage {
	string channelId = 1;
}


message ObsCheckUserConnectedRequest {
	string user_id = 1;
}

message ObsCheckUserConnectedResponse {
	bool state = 1;
}

message TriggerAlertRequest {
	string channel_id = 1;
	string alert_id = 2;
}

message RefreshOverlaysRequest {
	string channel_id = 1;
}

message RefreshChatSettingsRequest {
	string channel_id = 1;
}

message RefreshKappagenOverlaySettingsRequest {
	string channel_id = 1;
}

message TriggerKappagenRequest {
	message Emote {
		string id = 1;
		repeated string positions = 2;
	}

	string channel_id = 1;
	string text = 2;
	repeated Emote emotes = 3;
}

import "api/events.proto";

message TriggerKappagenByEventRequest {
	string channel_id = 1;
	api.events.TwirEventType event = 2;
}

message TriggerShowBrbRequest {
	string channel_id = 1;
	int32 minutes = 2;
	optional string text = 3;
}

message TriggerHideBrbRequest {
	string channel_id = 1;
}

message RefreshBrbSettingsRequest {
	string channel_id = 1;
}
